# -fanzhou_rpc_server

./: .gitignore  CLAUDE.md  fanzhou_rpc_server  fanzhou_rpc_server.pro  index3.html  main.cpp
config/: config_example.json
docs/: API_REFERENCE.zh.md  ARCHITECTURE.zh.md  CLOUD_UPLOAD_FEATURE.md  DEVELOPMENT.zh.md  FANZHOU_CLOUD_PROTOCOL.zh.md  IMPLEMENTATION_SUMMARY.md  README.zh.md
old/comm/: comm_can.cpp  comm_can.h  comm_serial.cpp  comm_serial.h
old/config/: app_config.json  config_example.json  system_settings.cpp  system_settings.h
old/core/: core.pro  core_config.cpp  core_config.h  core_context.cpp  core_context.h  core_main.cpp
old/device/: device_list.h
old/rpc/: json_rpc_client.cpp  json_rpc_client.h  json_rpc_dispatcher.cpp  json_rpc_dispatcher.h  json_rpc_server.cpp  json_rpc_server.h  rpc_error_codes.h  rpc_helpers.cpp  rpc_helpers.h  rpc_registry.cpp  rpc_registry.h
old/utils/: animation_utils.cpp  animation_utils.h  glass_style.h  logger.cpp  logger.h  utils.cpp  utils.h
qt_app/: README.md  qt_app.pro
qt_app/src/: connection_dialog.cpp  connection_dialog.h  connection_widget.cpp  connection_widget.h  device_widget.cpp  device_widget.h  group_widget.cpp  group_widget.h  home_widget.cpp  home_widget.h  log_widget.cpp  log_widget.h  main.cpp  mainwindow.cpp  mainwindow.h  rpc_client.cpp  (+16 more)
test_web/: index.html  launch.html  launch_web.py
test_web/src-tauri/: Cargo.toml  README.md  tauri.conf.json
test_web/src-tauri/capabilities/: default.json  shell.json
test_web/src-tauri/icons/: .gitkeep  icon.icns
test_web/src-tauri/src/: main.rs
(+132 files in other folders)
